2023-12-XX   2.9.0:
-------------------
  * `bitarray(n)` for integer initializer `n` will always return a bitarray
    of length `n` with all items initialized to `0`
  * add `util.ones()`


2023-12-09   2.8.5:
-------------------
  * speedup unaligned copies by always using word shifts (in combination
    with builtin byte swap 64 when available) when bit-endianness and
    machine byte-order are opposite
  * add `HAVE_BUILTIN_BSWAP64` to header
  * avoid misaligned pointers when casting to `(uint64_t *)`
  * add tests


2023-12-04   2.8.4:
-------------------
  * simplify `copy_n()` (remove special cases), see #d2d6fd53
  * add [word shift example C program](../examples/shift_r8.c),
    and simplify `shift_r8()`
  * improve documentation and testing
  * add [roadmap](https://github.com/ilanschnell/bitarray#roadmap)


2023-11-11   2.8.3:
-------------------
  * ensure readonly attribute is set correctly when creating new objects,
    see #211
  * optimize sparse bitarray compression for raw block type
  * improve hash functions in Bloom filter example


2023-10-03   2.8.2:
-------------------
  * update cibuildwheel to 2.16.1 in order to provide cp312 wheels on PyPI
  * improve error messages for masked assignment
  * simplify test collection
  * added `pytest.ini` to allow running pytest with no additional arguments,
    see #208
  * `util.sc_encode()`: avoid writing empty blocks at end of compressed
    stream, i.e. skip encoding when total population count is reached


2023-08-06   2.8.1:
-------------------
  * use reconstructor function for pickling, see #207
  * simplify implementation of `.reverse()`


2023-07-22   2.8.0:
-------------------
  * allow [integer sequence indexing](indexing.rst) by list of indices,
    see #204 (addresses #156 and #190)
  * add [masked indexing](indexing.rst) by bitarray masks,
    see #205 (addresses #190)
  * improve `.bytereverse()` docstring, see issue #202


2023-06-24   2.7.6:
-------------------